--- a/public/views/tournament-selection.ejs
+++ b/public/views/tournament-selection.ejs
@@ -7,7 +7,7 @@
                 <div>Hola, NO hay torneos</div>
                 <% } %>
 
-                    <form class="form" id="uploadGamesForm" action="/upload-games" method="post" autocomplete="off">
+                    <form class="form" id="uploadGamesForm" action="/upload-game" method="post" autocomplete="off">
                         <div class="form__container">
                             <label>
                                 Seleccione el torneo:
