--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1395,7 +1395,8 @@ main .container__tournament .container__trajectory .trajectory-trophies .small-d
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 1rem 0;
+  padding: 0.5rem 0;
+  width: 300px;
 }
 .container__fixture-id .fixture-match {
   -webkit-box-align: center;
@@ -1412,7 +1413,7 @@ main .container__tournament .container__trajectory .trajectory-trophies .small-d
   margin: 0.5rem;
   outline: #dc3545 3px solid;
   padding: 0.5rem 0;
-  width: 400px;
+  width: 100%;
 }
 .container__fixture-id .fixture-match.finished {
   outline-color: #3c9e39;
@@ -1430,7 +1431,6 @@ main .container__tournament .container__trajectory .trajectory-trophies .small-d
       -ms-flex-direction: column;
           flex-direction: column;
   text-decoration: none;
-  width: 150px;
 }
 .container__fixture-id .fixture-match .match-info .logo-link {
   margin: 0.25rem 0;
@@ -1454,7 +1454,7 @@ main .container__tournament .container__trajectory .trajectory-trophies .small-d
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
-  width: 75px;
+  width: 50px;
 }
 .container__fixture-id .fixture-match .match-info .player-link .match-info__player:focus {
   outline: 0;
@@ -1462,22 +1462,15 @@ main .container__tournament .container__trajectory .trajectory-trophies .small-d
 .container__fixture-id .fixture-match .match-info .match-info__team {
   border: 0;
   cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  resize: none;
   text-align: center;
-  width: 150px;
+  width: 130px;
 }
 .container__fixture-id .fixture-match .match-info .match-info__team:focus {
   outline: 0;
 }
 .container__fixture-id .fixture-match .match-info img {
-  max-width: 100px;
+  max-width: 75px;
 }
 .container__fixture-id .fixture-match .match-score {
   -webkit-box-align: center;
@@ -1554,6 +1547,176 @@ main .container__tournament .container__trajectory .trajectory-trophies .small-d
   font-size: 1rem;
 }
 
+@media only screen and (min-width: 450px) {
+  .container__fixture-id {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 1rem 0;
+    width: auto;
+  }
+  .container__fixture-id .fixture-match {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin: 0.5rem;
+    outline: #dc3545 3px solid;
+    padding: 0.5rem 0;
+    width: 400px;
+  }
+  .container__fixture-id .fixture-match.finished {
+    outline-color: #3c9e39;
+  }
+  .container__fixture-id .fixture-match .match-info {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    color: #000;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-decoration: none;
+    width: 150px;
+  }
+  .container__fixture-id .fixture-match .match-info .logo-link {
+    margin: 0.25rem 0;
+  }
+  .container__fixture-id .fixture-match .match-info .player-link {
+    color: #ce0404;
+    cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .container__fixture-id .fixture-match .match-info .player-link .match-info__player {
+    border: 0;
+    cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+    width: 75px;
+  }
+  .container__fixture-id .fixture-match .match-info .player-link .match-info__player:focus {
+    outline: 0;
+  }
+  .container__fixture-id .fixture-match .match-info .match-info__team {
+    border: 0;
+    cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+    width: 150px;
+  }
+  .container__fixture-id .fixture-match .match-info .match-info__team:focus {
+    outline: 0;
+  }
+  .container__fixture-id .fixture-match .match-info img {
+    max-width: 100px;
+  }
+  .container__fixture-id .fixture-match .match-score {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .container__fixture-id .fixture-match .match-score .match-score__goals {
+    border: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 3rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+    width: 30px;
+    /* Para retirar flechas en los input de tipo número */
+  }
+  .container__fixture-id .fixture-match .match-score .match-score__goals::-webkit-outer-spin-button, .container__fixture-id .fixture-match .match-score .match-score__goals::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  .container__fixture-id .fixture-match .match-score .match-score__goals:focus {
+    outline: 0;
+  }
+  .container__fixture-id .fixture-match .match-score .input__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 0 0.125rem;
+  }
+  .container__fixture-id .fixture-match .match-score .input__container .fixture-edit {
+    background-color: #ff852d;
+    border: 0;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 0.75rem;
+    margin-right: 0.25rem;
+    outline: #000 2px solid;
+    padding: 0.25rem 0.5rem;
+  }
+  .container__fixture-id .fixture-match .match-score .input__container .fixture-delete {
+    background-color: #ce0404;
+    border: 0;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 0.75rem;
+    margin-left: 0.25rem;
+    outline: #000 2px solid;
+    padding: 0.25rem 0.5rem;
+  }
+  .container__fixture-id .fixture-match .match-score .fixture-submit {
+    background-color: rgb(81, 179, 72);
+    border: 0;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 0.75rem;
+    outline: #000 2px solid;
+    padding: 0.25rem 0.5rem;
+  }
+  .container__fixture-id .fixture-match .match-score .match-score__versus {
+    font-size: 1.25rem;
+  }
+  .container__fixture-id .fixture-match .match-score input {
+    font-size: 1rem;
+  }
+}
 #uploadGamesForm {
   display: -webkit-box;
   display: -ms-flexbox;
