--- a/public/views/fixture-id.ejs
+++ b/public/views/fixture-id.ejs
@@ -14,8 +14,13 @@
                                 autocomplete="off">
                                 <%};%>
                                     <div class="match-info">
-                                        <textarea name="teamP1" wrap="soft" class="match-info__team"
-                                            value="<%=element.teamP1%>" readonly><%=element.teamP1%></textarea>
+                                        <%if(element.teamP1.split(" ").length > 1){%>
+                                            <textarea name="teamP1" rows="2" cols="10" wrap="soft" class="match-info__team" value="<%=element.teamP1%>"
+                                                readonly><%=element.teamP1%></textarea>
+                                                <%} else {%>
+                                                    <textarea name="teamP1" rows="1" cols="10" wrap="soft" class="match-info__team" value="<%=element.teamP1%>"
+                                                        readonly><%=element.teamP1%></textarea>
+                                                        <%};%>
                                         <a href="/fixture/<%=tournamentById.id%>/<%=element.teamIdP1%>"
                                             class="logo-link">
                                             <img src="<%=element.teamLogoP1%>" alt="<%=element.teamP1%>">
@@ -27,6 +32,7 @@
                                         </a>
                                     </div>
                                     <div class="match-score">
+                                        <div class="match__container">
                                         <%if(element.scoreP1 !==undefined){%>
                                             <input name="scoreP1" class="match-score__goals"
                                                 value="<%=element.scoreP1%>">
@@ -39,22 +45,31 @@
                                                     <%if(element.scoreP2 !==undefined){%>
                                                         <input name="scoreP2" class="match-score__goals"
                                                             value="<%=element.scoreP2%>">
+                                                            </div>
                                                         <div class="input__container">
-                                                            <input type="submit" value="Editar"
+                                                            <input type="submit" value="&#xf044"
                                                                 formaction="/update-game/<%=tournamentById.id%>/<%=element.matchId%>?_method=PUT"
-                                                                class="fixture-edit">
-                                                            <input type="submit" value="Borrar" class="fixture-delete">
+                                                                class="fixture-edit fas">
+                                                            <input type="submit" value="&#xf2ed" class="fixture-delete fas" name="fixture-delete">
                                                         </div>
                                                         <%} else {%>
-                                                            <input name="scoreP2" class="match-score__goals"
+                                                                <input name="scoreP2" class="match-score__goals"
                                                                 type="number" min="0" required>
-                                                            <input type="submit" value="Confirmar"
+                                                                </div>
+                                                                <div class="input__container">
+                                                                <input type="submit" value="Confirmar"
                                                                 class="fixture-submit">
+                                                                </div>
                                                             <%};%>
                                     </div>
                                     <div class="match-info">
-                                        <input name="teamP2" class="match-info__team" value="<%=element.teamP2%>"
-                                            readonly>
+                                        <%if(element.teamP2.split(" ").length > 1){%>
+                                            <textarea name="teamP2" rows="2" cols="10" wrap="soft"
+                                            class="match-info__team" value="<%=element.teamP2%>" readonly><%=element.teamP2%></textarea>
+                                                <%} else {%>
+                                                    <textarea name="teamP2" rows="1" cols="10" wrap="soft" class="match-info__team" value="<%=element.teamP2%>"
+                                                        readonly><%=element.teamP2%></textarea>
+                                                    <%};%>
                                         <a href="/fixture/<%=tournamentById.id%>/<%=element.teamIdP2%>"
                                             class="logo-link">
                                             <img src="<%=element.teamLogoP2%>" alt="<%=element.teamP2%>">
