--- a/public/scss/partials/_fixture-id.scss
+++ b/public/scss/partials/_fixture-id.scss
@@ -3,13 +3,13 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 0.5rem 0;
-    width: 300px;
+    // width: 300px;
 
     .fixture-match {
         align-items: center;
         display: flex;
         flex-wrap: nowrap;
-        justify-content: space-between;
+        justify-content: space-evenly;
         margin: 0.5rem;
         outline: #dc3545 3px solid;
         padding: 0.5rem 0;
@@ -41,6 +41,7 @@
                     cursor: pointer;
                     display: flex;
                     flex-wrap: wrap;
+                    font-size: 0.875rem;
                     justify-content: center;
                     text-align: center;
                     width: 50px;
@@ -54,13 +55,10 @@
             .match-info__team {
                 border: 0;
                 cursor: pointer;
-                // display: flex;
-                // flex-wrap: wrap;
-                // height: 30px;
-                // justify-content: center;
+                font-size: 0.875rem;
                 resize: none;
                 text-align: center;
-                width: 130px;
+                width: 100px;
 
                 &:focus {
                     outline: 0;
@@ -68,13 +66,15 @@
             }
 
             img {
-                max-width: 75px;
+                max-height: 70px;
+                max-width: 70px;
             }
         }
 
         .match-score {
             align-items: center;
             display: flex;
+            flex-direction: column;
             flex-wrap: wrap;
             justify-content: space-evenly;
             // width: 125px;
@@ -82,10 +82,10 @@
             .match-score__goals {
                 border: 0;
                 display: flex;
-                font-size: 3rem;
+                font-size: 2.25rem;
                 justify-content: center;
                 text-align: center;
-                width: 30px;
+                width: 35px;
 
                 /* Para retirar flechas en los input de tipo número */
                 &::-webkit-outer-spin-button,
@@ -99,17 +99,26 @@
                 }
             }
 
-            .input__container {
+            .match__container {
+                align-items: center;
                 display: flex;
-                padding: 0 0.125rem;
+                justify-content: center;
+                width: 100%;
+            }
+
+            .input__container {
+                align-items: center;
+                display: flex;
+                // flex-direction: column;
+                justify-content: center;
+                // padding: 0 0.125rem;
 
                 .fixture-edit {
                     background-color: #ff852d;
                     border: 0;
                     border-radius: 10px;
                     color: #fff;
-                    font-size: 0.75rem;
-                    margin-right: 0.25rem;
+                    font-size: 0.675rem;
                     outline: #000 2px solid;
                     padding: 0.25rem 0.5rem;
                 }
@@ -119,8 +128,8 @@
                     border: 0;
                     border-radius: 10px;
                     color: #fff;
-                    font-size: 0.75rem;
-                    margin-left: 0.25rem;
+                    font-size: 0.675rem;
+                    margin-left: 0.375rem;
                     outline: #000 2px solid;
                     padding: 0.25rem 0.5rem;
                 }
@@ -131,13 +140,13 @@
                 border: 0;
                 border-radius: 10px;
                 color: #fff;
-                font-size: 0.75rem;
+                font-size: 0.675rem;
                 outline: #000 2px solid;
                 padding: 0.25rem 0.5rem;
             }
 
             .match-score__versus {
-                font-size: 1.25rem;
+                font-size: 1rem;
             }
 
             input {
@@ -148,76 +157,22 @@
     }
 }
 
-@media only screen and (min-width: 450px) {
+@media only screen and (min-width: 400px) {
 
     .container__fixture-id {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        padding: 1rem 0;
-        width: auto;
-
         .fixture-match {
-            align-items: center;
-            display: flex;
-            flex-wrap: nowrap;
-            justify-content: space-between;
-            margin: 0.5rem;
-            outline: #dc3545 3px solid;
-            padding: 0.5rem 0;
-            width: 400px;
-
-            &.finished {
-                outline-color: #3c9e39;
-            }
-
+            max-width: 400px;
             .match-info {
-                align-items: center;
-                color: #000;
-                display: flex;
-                flex-direction: column;
-                text-decoration: none;
-                width: 150px;
-
-                .logo-link {
-                    margin: 0.25rem 0;
-                }
-
-                .player-link {
-                    color: #ce0404;
-                    cursor: pointer;
-                    display: flex;
-
-                    .match-info__player {
-                        border: 0;
-                        cursor: pointer;
-                        display: flex;
-                        flex-wrap: wrap;
-                        justify-content: center;
-                        text-align: center;
-                        width: 75px;
-
-                        &:focus {
-                            outline: 0;
-                        }
-                    }
-                }
-
+                width: 125px;
                 .match-info__team {
-                    border: 0;
-                    cursor: pointer;
-                    display: flex;
-                    flex-wrap: wrap;
-                    justify-content: center;
-                    text-align: center;
-                    width: 150px;
-
+                    font-size: 1rem;
+                    width: 115px;
                     &:focus {
                         outline: 0;
                     }
                 }
-
                 img {
+                    max-height: 100px;
                     max-width: 100px;
                 }
             }
@@ -227,15 +182,16 @@
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: space-evenly;
-                // width: 125px;
-
-                .match-score__goals {
+                width: 95px;
+                
+                .match__container {
+                    .match-score__goals {
                     border: 0;
                     display: flex;
                     font-size: 3rem;
                     justify-content: center;
                     text-align: center;
-                    width: 30px;
+                    width: 40px;
 
                     /* Para retirar flechas en los input de tipo número */
                     &::-webkit-outer-spin-button,
@@ -246,6 +202,7 @@
 
                     &:focus {
                         outline: 0;
+                    }
                     }
                 }
 
@@ -295,6 +252,14 @@
                 }
 
             }
+        }
+    }
+}
+
+@media only screen and (min-width: 576px) { 
+    .container__fixture-id {
+        .fixture-match {
+            max-width: 350px
         }
     }
 }
