--- a/public/views/fixture-id-team.ejs
+++ b/public/views/fixture-id-team.ejs
@@ -16,8 +16,14 @@
                                 autocomplete="off">
                                 <%};%>
                                     <div class="match-info">
-                                        <input name="teamP1" class="match-info__team" value="<%=element.teamP1%>"
-                                            readonly>
+                                        <%if(element.teamP1.split(" ").length > 1){%>
+                                            <textarea name=" teamP1" rows="2" cols="10" wrap="soft"
+                                            class="match-info__team" value="<%=element.teamP1%>" 
+                                            readonly><%=element.teamP1%></textarea>
+                                                <%} else {%>
+                                                    <textarea name="teamP1" rows="1" cols="10" wrap="soft" class="match-info__team" value="<%=element.teamP1%>"
+                                                        readonly><%=element.teamP1%></textarea>
+                                                    <%};%>
                                         <a href="/fixture/<%=tournamentId%>/<%=element.teamIdP1%>" class="logo-link">
                                             <img src="<%=element.teamLogoP1%>" alt="<%=element.teamP1%>">
                                         </a>
@@ -27,6 +33,7 @@
                                         </a>
                                     </div>
                                     <div class="match-score">
+                                        <div class="match__container">
                                         <%if(element.scoreP1 !==undefined){%>
                                             <input name="scoreP1" class="match-score__goals"
                                                 value="<%=element.scoreP1%>">
@@ -37,25 +44,33 @@
                                                 <span class="match-score__versus">vs</span>
                                                 <%};%>
                                                     <%if(element.scoreP2 !==undefined){%>
-                                                        <input name="scoreP2" class=" match-score__goals"
+                                                        <input name="scoreP2" class="match-score__goals"
                                                             value="<%=element.scoreP2%>">
+                                                            </div>
                                                         <div class="input__container">
-                                                            <input type="submit"
-                                                                formaction="/update-game/<%=tournamentId%>/<%=element.matchId%>?_method=PUT"
-                                                                value="Editar" class="fixture-edit">
-                                                            <input type="submit" value="Borrar" class="fixture-delete">
+                                                            <input type="submit" value="&#xf044" formaction="/update-game/<%=tournamentId%>/<%=element.matchId%>?_method=PUT"
+                                                                class="fixture-edit fas">
+                                                            <input type="submit" value="&#xf2ed" class="fixture-delete fas" name="fixture-delete">
                                                         </div>
                                                         <%} else {%>
                                                             <input name="scoreP2" class="match-score__goals"
                                                                 type="number" min="0" required>
+                                                                </div>
+                                                                <div class="input__container">
                                                             <input type="submit" value="Confirmar"
                                                                 class="fixture-submit">
+                                                                </div>
                                                             <%};%>
-
                                     </div>
                                     <div class="match-info">
-                                        <input name="teamP2" class="match-info__team" value="<%=element.teamP2%>"
-                                            readonly>
+                                        <%if(element.teamP2.split(" ").length > 1){%>
+                                            <textarea name="teamP2" rows="2" cols="10" wrap="soft"
+                                            class="match-info__team" value="<%=element.teamP2%>" 
+                                            readonly><%=element.teamP2%></textarea>
+                                                <%} else {%>
+                                                    <textarea name="teamP2" rows="1" cols="10" wrap="soft" class="match-info__team" value="<%=element.teamP2%>"
+                                                        readonly><%=element.teamP2%></textarea>
+                                                    <%};%>
                                         <a href="/fixture/<%=tournamentId%>/<%=element.teamIdP2%>" class="logo-link">
                                             <img src="<%=element.teamLogoP2%>" alt="<%=element.teamP2%>">
                                         </a>
@@ -65,7 +80,6 @@
                                         </a>
                                     </div>
                             </form>
-
                             <%});%>
         </div>
         <div class="return">
